--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,8 +14,13 @@
 <body>
 
 <nav class="navbar fixed w-full z-50">
+    <button id="themeToggle" class="text-xl">🌙</button>
+
     <h1 class="logo">Oishy</h1>
-    <ul class="nav-links">
+
+    <button id="menuBtn" class="md:hidden text-3xl">☰</button>
+
+    <ul id="menu" class="nav-links md:flex hidden">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
@@ -37,12 +42,19 @@
                 <i data-feather="cpu" class="icon"></i>
             </div>
 
-            <a href="#projects" class="btn">View My Work</a>
+            <!-- BUTTONS -->
+            <div class="flex gap-4 justify-center md:justify-start">
+                <a href="#projects" class="btn">View My Work</a>
+
+                <a href="assets/cv/Oishy_CV.pdf" download class="btn">
+                    Download CV
+                </a>
+            </div>
         </div>
 
         <div class="flex justify-center fade">
             <img src="assets/images/profile.jpg"
-                 class="w-64 h-64 rounded-full object-cover border-4 border-white shadow-2xl animate-float">
+                 class="w-64 h-64 rounded-full object-cover border-4 border-white shadow-2xl">
         </div>
     </div>
 </section>
@@ -95,32 +107,38 @@
     <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-10">
         <div class="project-card glass">
             <h3>Personal Portfolio Website</h3>
-            <p>
-                A visually rich portfolio built with HTML, Tailwind CSS,
-                and JavaScript featuring animations and form validation.
-            </p>
+            <p>Modern portfolio with animations and responsive design.</p>
+
+            <div class="flex justify-center gap-4 mt-4">
+                <a href="#" class="btn">Live</a>
+                <a href="https://github.com/MarisaOishy/portfolio_updated" target="_blank" class="btn">
+                    GitHub
+                </a>
+            </div>
         </div>
 
         <div class="project-card glass">
             <h3>Landing Page UI</h3>
-            <p>
-                A responsive landing page with modern layout, hover effects,
-                and mobile-first optimization.
-            </p>
+            <p>Responsive landing page with modern layout and hover effects.</p>
         </div>
     </div>
 </section>
 
 <section id="contact" class="fade">
     <h2 class="section-title">Contact Me</h2>
-
-    <form id="contactForm" class="contact-card">
+<form id="contactForm" class="contact-card">
+    <div class="contact-grid">
         <input id="name" type="text" placeholder="Your Name">
         <input id="email" type="email" placeholder="Your Email">
-        <textarea id="message" rows="5" placeholder="Your Message"></textarea>
-        <button type="submit">Send Message</button>
-        <p id="error"></p>
-    </form>
+    </div>
+
+    <textarea id="message" rows="5" placeholder="Your Message"></textarea>
+
+    <button type="submit" class="send-btn">Send Message</button>
+    <p id="error"></p>
+</form>
+
+
 </section>
 
 <script src="js/script.js"></script>
