added linkedin,mail,git id

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -137,6 +137,19 @@
     <button type="submit" class="send-btn">Send Message</button>
     <p id="error"></p>
 </form>
+<div class="contact-icons">
+    <a href="oishy25803@gmail.com" aria-label="Email">
+        <i data-feather="mail"></i>
+    </a>
+
+    <a href="https://github.com/MarisaOishy" target="_blank" aria-label="GitHub">
+        <i data-feather="github"></i>
+    </a>
+
+    <a href="https://www.linkedin.com/in/marisa-oishy-ba1b4323a/" target="_blank" aria-label="LinkedIn">
+        <i data-feather="linkedin"></i>
+    </a>
+</div>
 
 
 </section>
