--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -155,5 +155,10 @@
 </section>
 
 <script src="js/script.js"></script>
+<!-- Success Toast -->
+<div id="toast" class="toast">
+    Message sent successfully!
+</div>
+
 </body>
 </html>
